--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "dragon-suppliers-nepal",
   "private": true,
@@ -6,13 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.3",
+    "react-router-dom": "^7.1.0",
     "lucide-react": "^0.475.0",
     "recharts": "^2.15.0",
     "clsx": "^2.1.1",
